update projects section styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	</head>
 	<body class="is-preload">
 
@@ -84,23 +85,38 @@
 									<h3>Projects</h3>
 									<div class="features">
 										<article>
-											<a href="https://zilloh.onrender.com/" class="image"><img src="images/pic01.png" alt="" /></a>
+											<a href="https://zilloh.onrender.com/" target="_blank" class="image"><img src="images/pic01.png" alt="Zilloh project" class="project-image" /></a>
 											<div class="inner">
-												<h4>Zilloh</h4>
+												<div class="repo-button-title-container">
+													<h4 class="project-header">Zilloh</h4>
+													<div class="repo-button-container">
+														<a href="https://github.com/stevenpaalz/Zilloh" target="_blank"><button>See Code  <i class="icon solid fa-location-arrow"></i></button></a>
+													</div>
+												</div>
 												<p>A full-stack clone of the house finding site Zillow, where users can post and browse homes for sale built with Rails, PostgreSQL, and React</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://magellan-wpae.onrender.com/" class="image"><img src="images/pic02.png" alt="" /></a>
+											<a href="https://magellan-wpae.onrender.com/" target="_blank" class="image"><img src="images/pic02.png" alt="Magellan project" class="project-image" /></a>
 											<div class="inner">
-												<h4>Magellan</h4>
+												<div class="repo-button-title-container">
+													<h4 class="project-header">Magellan</h4>
+													<div class="repo-button-container">
+														<a href="https://github.com/stevenpaalz/magellan" target="_blank"><button>See Code  <i class="icon solid fa-location-arrow"></i></button></a>
+													</div>
+												</div>
 												<p>Magellan is a city exploration application that enables users to create and participate in “quests” to explore their community or a new city built using the MERN stack</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://stevenpaalz.github.io/BigDuckHunter/" class="image"><img src="images/pic03.png" alt="Duck Hunt Gameplay" /></a>
+											<a href="https://stevenpaalz.github.io/BigDuckHunter/" target="_blank" class="image"><img src="images/pic03.png" alt="Duck Hunt Gameplay" class="project-image" /></a>
 											<div class="inner">
-												<h4>Big Duck Hunter</h4>
+												<div class="repo-button-title-container">
+													<h4 class="project-header">Big Duck Hunter</h4>
+													<div class="repo-button-container">
+														<a href="https://github.com/stevenpaalz/BigDuckHunter" target="_blank"><button>See Code  <i class="icon solid fa-location-arrow"></i></button></a>
+													</div>
+												</div>
 												<p>Big Duck Hunter is a browser-based duck hunting game with both a single player and versus mode built using vanilla JavaScript and Canvas</p>
 											</div>
 										</article>
