update linked meta tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<title>Steve Paalz Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:title" content="Steve Paalz's Portfolio" />
+		<meta property="og:image" content="images/banner.jpg" />
+		<meta property="og:description" content="Portfolio site" />
+		<meta property="og:url" content="https://stevenpaalz.github.io/" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	</head>
